# VodBot-rs

./: Cargo.toml  README.md
src/: cli.rs  config.rs  gql.rs  itd.rs  lib.rs  main.rs  twitch.rs  twitch_api.rs  util.rs  vodbot_api.rs
src/commands/: info.rs  init.rs  pull.rs
