[package]
name = "vodbot"
description = "A command line interface tool for managing VODs, chat logs, and more from Twitch."
authors = ["Logan Hickok-Dickson <self@notquiteapex.net>"]
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/FriendTeamInc/VodBot-rs"
repository = "https://github.com/FriendTeamInc/VodBot-rs"
license = "MIT"
keywords = ["twitch", "youtube", "archival", "cli"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
casual = "0.2.0"
clap = { version = "4.2.7", features = ["derive"] }
ctrlc = "3.2.5"
dirs = "5.0.1"
google-youtube3 = "5.0.2"
indoc = "2"
num_cpus = "1.15.0"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_valid = "0.16.1"
serde_json = "1.0.91"
serde_yaml = "0.9.21"
structstruck = "0.4.1"
m3u8-rs = "5.0.4"
threadpool = "1.8.1"
glob = "0.3.1"
